--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     environment:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./db/mysql/volumes:/var/lib/mysql
 
   webpacker:
     build: .
